Replaced Adventurer with Actor

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Dungeons of Neverknown</title>
   <script src="rot.min.js"></script>
-  <script src="game.js"></script>
-  <script src="adventurer.js"></script>
+  <script src="dn.js"></script>
+  <script src="actor.js"></script>
   <script src="level.js"></script>
 </head>
 
